# Cera

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
source/runtime/: CMakeLists.txt
source/runtime/_cera_engine/private/: scene.cpp
source/runtime/_cera_engine/private/render/: byte_address_buffer.cpp  command_queue.cpp  constant_buffer.h  constant_buffer_view.h  d3dx12_call.cpp  descriptor_allocation.cpp  descriptor_allocator.cpp  descriptor_allocator.h  dynamic_descriptor_heap.h  index_buffer.h  mesh_factory.cpp  pipeline_state_object.h  render_target.cpp  resource_state_tracker.cpp  root_signature.cpp  shader_resource_view.cpp  swapchain.cpp  texture.cpp  unordered_access_view.cpp  unordered_access_view.h  upload_buffer.cpp  vertex_buffer.h
source/runtime/_cera_engine/public/: mesh.h  scene.h  scene_node.h
source/runtime/_cera_engine/public/device/: windows_declarations.h  windows_types.h
source/runtime/_cera_engine/public/render/: buffer.h  command_list.h  command_queue.h  d3dx12.h  d3dx12_declarations.h  mesh_factory.h  root_signature.h  swapchain.h
source/runtime/cera_app/: CMakeLists.txt
source/runtime/cera_app/private/: abstract_game.cpp  core_application.cpp  core_application.h  core_globals.cpp  core_globals.h  core_platform.h  events.cpp  game_engine.cpp  game_engine.h  generic_application.cpp  generic_application.h  generic_application_message_handler.cpp  generic_application_message_handler.h  generic_window.cpp  generic_window.h  generic_window_definition.cpp  generic_window_definition.h  gui_application.cpp  gui_application.h  gui_renderer.cpp  gui_renderer.h  launch.cpp  launch.h
source/runtime/cera_app/private/util/: clock.cpp  clock.h  guard_value.h
source/runtime/cera_app/private/windows/: win32_application.cpp  win32_application.h  win32_application_helpers.cpp  win32_application_helpers.h  win32_entrypoint.cpp  win32_platform.cpp  win32_platform.h  win32_system_includes.cpp  win32_system_includes.h  win32_window.cpp  win32_window.h
source/runtime/cera_app/public/: abstract_game.h  events.h  generic_application_creation_params.h  generic_entrypoint.h  key_codes.h
source/runtime/cera_app/public/util/: types.h
source/runtime/cera_core/: CMakeLists.txt
source/runtime/cera_core/private/util/: assert.cpp  blob.cpp  blob_reader.cpp  blob_view.cpp  blob_writer.cpp  color.cpp  log.cpp  memory_size.cpp  pointer_math.cpp  string_op.cpp  types.cpp
source/runtime/cera_core/private/windows/: win32_platform_helpers.cpp
source/runtime/cera_core/public/: core_platform.h
source/runtime/cera_core/public/util/: assert.h  blob.h  blob_reader.h  blob_view.h  blob_writer.h  color.h  defines.h  log.h  memory_size.h  pointer_math.h  string_op.h  types.h
source/runtime/cera_core/public/windows/: win32_min.h  win32_platform_helpers.h
source/runtime/cera_directx/: CMakeLists.txt
source/runtime/cera_directx/private/: command_list.cpp  command_queue.cpp  directx_call.cpp  directx_device.cpp  directx_feature_level.cpp  directx_feature_shader_model.cpp  directx_mesh_factory.cpp  directx_renderer.cpp  directx_swapchain.cpp  gpu_description.cpp
source/runtime/cera_directx/private/descriptors/: descriptor_allocation.cpp  descriptor_allocator.cpp  descriptor_allocator_page.cpp  dynamic_descriptor_heap.cpp
source/runtime/cera_directx/private/dxgi/: dxgi_adapter_manager.cpp  dxgi_format.cpp  dxgi_util.cpp
source/runtime/cera_directx/private/resources/: buffer.cpp  byte_address_buffer.cpp  clear_state.cpp  constant_buffer.cpp  constant_buffer_view.cpp  index_buffer.cpp  pipeline_state_object.cpp  raster_state.cpp  render_target.cpp  resource.cpp  resource_state_tracker.cpp  root_signature.cpp  shader_library.cpp  shader_resource_view.cpp  texture.cpp  unordered_access_view.cpp  upload_buffer.cpp  vertex_buffer.cpp
source/runtime/cera_directx/private/util/: state_controller.h  thread_name.cpp  vertex_types.cpp
source/runtime/cera_directx/public/: command_list.h  command_queue.h  directx_call.h  directx_device.h  directx_feature_level.h  directx_feature_shader_model.h  directx_swapchain.h  directx_util.h  gpu_description.h  gpu_scorer.h
source/runtime/cera_directx/public/descriptors/: descriptor_allocation.h  descriptor_allocator.h  descriptor_allocator_page.h  dynamic_descriptor_heap.h
source/runtime/cera_directx/public/dxgi/: dxgi_format.h
source/runtime/cera_directx/public/resource_descriptions/: create_clear_state_desc.h  create_index_buffer_desc.h  create_pipeline_state_desc.h  create_raster_state_desc.h  create_resource_desc.h  create_texture_desc.h  create_vertex_buffer_desc.h
source/runtime/cera_directx/public/resources/: buffer.h  byte_address_buffer.h  clear_state.h  constant_buffer_view.h  index_buffer.h  iresource.h  pipeline_state_object.h  raster_state.h  render_target.h  resource.h  resource_state_tracker.h  root_signature.h  shader_library.h  shader_resource_view.h  texture.h  (+3 more)
source/runtime/cera_engine/: CMakeLists.txt
source/runtime/cera_engine/private/: gui.cpp  mesh.cpp  scene_node.cpp
source/runtime/cera_engine/public/: gui.h
source/runtime/cera_game/private/: application.cpp
source/runtime/cera_game/public/: application.h
source/runtime/cera_rhi/: CMakeLists.txt
source/runtime/cera_rhi/cera_rhi_core/: CMakeLists.txt
source/runtime/cera_rhi/cera_rhi_directx/: CMakeLists.txt
source/runtime/cera_rhi/cera_rhi_null/: CMakeLists.txt
source/runtime/cera_rhi/private/: rhi.cpp  rhi_clear_bits.cpp  rhi_resource_slot.cpp
source/runtime/cera_rhi/public/: rhi.h  rhi_buffer.h  rhi_byte_address_buffer.h  rhi_cull_mode.h  rhi_format.h  rhi_index_buffer.h  rhi_pipeline_state_object.h  rhi_renderer_backend.h  rhi_renderer_info.h  rhi_renderer_output_window_user_data.h  rhi_resource.h  rhi_resource_pool.h  rhi_resource_slot.h  rhi_resource_slots.h  rhi_shader_resource_view.h  rhi_texture.h  rhi_vertex_buffer.h  rhi_viewport.h
source/tools/demo/: CMakeLists.txt
source/tools/demo/private/: camera.cpp  camera.h  demo.cpp  demo.h
source/tools/demo_v2/: CMakeLists.txt
source/tools/demo_v2/private/: demo.cpp  demo.h
(+202 files in other folders)
